<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp">

    <TextView
        android:id="@+id/message"
        style="@style/Text.Heading4.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_price_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/message">

        <TextView
            style="@style/Text.Heading5.SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/product_price"
            android:textColor="@color/blue_black_50" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_unit_rupiah">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:inputType="number"
                android:singleLine="true"
                tools:text="1.000" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Text.Heading5.SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/product_price_promo"
            android:textColor="@color/blue_black_50" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_unit_rupiah">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPricePromo"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbIsPromo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_promo_label" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdate"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNegative"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpdate"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
        app:layout_constraintTop_toTopOf="@+id/btnUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>